--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <div class="col-md-4 align-self-start">
                 <div class="sobre_nosaltres_media">
-                    <img src="assets\images\imatge_intro_01.jpg" class="img-fluid">
+                    <img src="assets\images\imatge_intro_vertical_01.jpg" class="img-fluid">
                 </div>
             </div>
 
@@ -117,12 +117,6 @@
                     Simplement fem les coses que ens agraden i com ens agraden, amb molta ilusió i intentant cuidar
                     sempre els petits detalls.
 
-                    Ens agrada pensar que hem creat un petit espai, íntim, relaxat, on poder gaudir d'una bona estona,
-                    d'un bon àpat, una cita... però sobretot un espai on sentir-se còmodes, com a casa, com els nostres
-                    convidats...
-
-                    Us esperem! Lucas i Celeste
-
                 </p>
 
             </div>
@@ -137,7 +131,8 @@
 
                 <!-- Description -->
                 <p class="">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Simplement fem les coses que ens agraden, amb molta ilusió i intentant cuidar sempre els petits
+                    detalls.
                 </p>
 
             </div>
@@ -145,23 +140,42 @@
 
                 <!-- Image -->
                 <div class="sobre_nosaltres_media alt">
-                    <img src="assets\images\imatge_intro_02.jpg" class="img-fluid" alt="...">
+                    <img src="assets\images\imatge_intro_vertical_02.jpg" class="img-fluid" alt="...">
                 </div>
 
             </div>
             <div class="col-md-6 order-md-1 align-self-center">
 
                 <!-- Content -->
-                <h2 class="sobre_nosaltres_titol mt-3"><em>Velit ipsa</em> quidem debitis amet</h2>
+                <h2 class="sobre_nosaltres_titol mt-3"><em>Us esperem !</em></h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam quae similique asperiores
-                    consequatur! Nihil temporibus qui enim, ab voluptates corporis commodi eum maxime. Accusamus
-                    voluptates a, et quidem! Quo, et?
+                    Ens agrada pensar que hem creat un petit espai, íntim, relaxat, on poder gaudir
+                    d'una bona estona, d'un bon àpat, una cita... però sobretot un espai on sentir-se còmodes,
+                    com a casa, com els nostres convidats... Us esperem! Lucas i Celeste
                 </p>
 
             </div>
         </div> <!-- / .row -->
     </div> <!-- / .container -->
+
+    <div class="seccio_gradient">
+        <div class="container mt-5 ">
+            <div class="row">
+                <div class="col-md-4">
+
+                    <!-- Description -->
+                    <p class="sobre_nosaltres">
+                        La nostra cuina és fresca, variada, respectuosa... tant amb la tradició com amb els productes
+                        que
+                        comprem.
+                    </p>
+
+                </div>
+            </div> <!-- / .row -->
+        </div> <!-- / .container -->
+
+    </div>
+
 
 
 
