--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- My CSS -->
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/lightbox/css/lightbox.css">
+    <link rel="stylesheet" href="assets/lightbox/css/lightbox.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
@@ -115,7 +115,7 @@
         <div class="col-md-4 align-self-start">
           <div class="sobre_nosaltres_media">
             <img
-              src="assets\images\imatge_intro_vertical_01.jpg"
+              src="assets\images\imatge_intro_vertical_04.jpg"
               class="img-fluid img_sobre_nosaltres"
             />
           </div>
@@ -148,7 +148,7 @@
           <!-- Image -->
           <div class="sobre_nosaltres_media alt">
             <img
-              src="assets\images\imatge_intro_vertical_02.jpg"
+              src="assets\images\imatge_intro_vertical_05.jpg"
               class="img-fluid img_sobre_nosaltres"
               alt="..."
             />
@@ -311,7 +311,7 @@
         <div class="carousel-cell">
           <!-- Image -->
           <img
-            src="assets\images\imatge_intro_02.jpg"
+            src="assets\images\imatge_carousel_7.jpg"
             alt="..."
             class="carousel-image"
           />
@@ -356,6 +356,62 @@
             class="carousel-image"
           />
         </div>
+        <div class="carousel-cell">
+          <!-- Image -->
+          <img
+            src="assets\images\imatge_carousel_8.jpg"
+            alt="..."
+            class="carousel-image"
+          />
+        </div>
+        <div class="carousel-cell">
+          <!-- Image -->
+          <img
+            src="assets\images\imatge_carousel_9.jpg"
+            alt="..."
+            class="carousel-image"
+          />
+        </div>
+        <div class="carousel-cell">
+          <!-- Image -->
+          <img
+            src="assets\images\imatge_carousel_10.jpg"
+            alt="..."
+            class="carousel-image"
+          />
+        </div>
+        <div class="carousel-cell">
+          <!-- Image -->
+          <img
+            src="assets\images\imatge_carousel_11.jpg"
+            alt="..."
+            class="carousel-image"
+          />
+        </div>
+        <div class="carousel-cell">
+          <!-- Image -->
+          <img
+            src="assets\images\imatge_carousel_12.jpg"
+            alt="..."
+            class="carousel-image"
+          />
+        </div>
+        <div class="carousel-cell">
+          <!-- Image -->
+          <img
+            src="assets\images\imatge_carousel_13.jpg"
+            alt="..."
+            class="carousel-image"
+          />
+        </div>
+        <div class="carousel-cell">
+          <!-- Image -->
+          <img
+            src="assets\images\imatge_carousel_14.jpg"
+            alt="..."
+            class="carousel-image"
+          />
+        </div>
       </div>
       <!-- / .section_dishes__carousel -->
     </section>
@@ -380,43 +436,99 @@
         <!-- / .row -->
         <div class="row section_gallery__grid">
           <div class="col-6 col-sm-6 col-md-4 section_gallery__grid__item">
-            <a href="assets\images\gallery\Turandot_primavera_2020_Local_1.jpg" data-lightbox="gallery">
-              <img src="assets\images\gallery\Turandot_primavera_2020_Local_1.jpg" class="img-fluid" alt="..." />
+            <a
+              href="assets\images\gallery\Turandot_primavera_2020_Local_1.jpg"
+              data-lightbox="gallery"
+            >
+              <img
+                src="assets\images\gallery\Turandot_primavera_2020_Local_1.jpg"
+                class="img-fluid"
+                alt="..."
+              />
             </a>
           </div>
           <div class="col-6 col-sm-6 col-md-4 section_gallery__grid__item">
-            <a href="assets\images\gallery\Turandot_primavera_2020_Local_2.jpg" data-lightbox="gallery">
-              <img src="assets\images\gallery\Turandot_primavera_2020_Local_2.jpg" class="img-fluid" alt="..." />
+            <a
+              href="assets\images\gallery\Turandot_primavera_2020_Local_2.jpg"
+              data-lightbox="gallery"
+            >
+              <img
+                src="assets\images\gallery\Turandot_primavera_2020_Local_2.jpg"
+                class="img-fluid"
+                alt="..."
+              />
             </a>
           </div>
           <div class="col-6 col-sm-6 col-md-4 section_gallery__grid__item">
-            <a href="assets\images\gallery\Turandot_primavera_2020_Local_3.jpg" data-lightbox="gallery">
-              <img src="assets\images\gallery\Turandot_primavera_2020_Local_3.jpg" class="img-fluid" alt="..." />
+            <a
+              href="assets\images\gallery\Turandot_primavera_2020_Local_3.jpg"
+              data-lightbox="gallery"
+            >
+              <img
+                src="assets\images\gallery\Turandot_primavera_2020_Local_3.jpg"
+                class="img-fluid"
+                alt="..."
+              />
             </a>
           </div>
           <div class="col-6 col-sm-6 col-md-4 section_gallery__grid__item">
-            <a href="assets\images\gallery\Turandot_primavera_2020_Local_4.jpg" data-lightbox="gallery">
-              <img src="assets\images\gallery\Turandot_primavera_2020_Local_4.jpg" class="img-fluid" alt="..." />
+            <a
+              href="assets\images\gallery\Turandot_primavera_2020_Local_4.jpg"
+              data-lightbox="gallery"
+            >
+              <img
+                src="assets\images\gallery\Turandot_primavera_2020_Local_4.jpg"
+                class="img-fluid"
+                alt="..."
+              />
             </a>
           </div>
           <div class="col-6 col-sm-6 col-md-4 section_gallery__grid__item">
-            <a href="assets\images\gallery\Turandot_primavera_2020_Local_5.jpg" data-lightbox="gallery">
-              <img src="assets\images\gallery\Turandot_primavera_2020_Local_5.jpg" class="img-fluid" alt="..." />
+            <a
+              href="assets\images\gallery\Turandot_primavera_2020_Local_5.jpg"
+              data-lightbox="gallery"
+            >
+              <img
+                src="assets\images\gallery\Turandot_primavera_2020_Local_5.jpg"
+                class="img-fluid"
+                alt="..."
+              />
             </a>
           </div>
           <div class="col-6 col-sm-6 col-md-4 section_gallery__grid__item">
-            <a href="assets\images\gallery\Turandot_primavera_2020_Local_6.jpg" data-lightbox="gallery">
-              <img src="assets\images\gallery\Turandot_primavera_2020_Local_6.jpg" class="img-fluid" alt="..." />
+            <a
+              href="assets\images\gallery\Turandot_primavera_2020_Local_6.jpg"
+              data-lightbox="gallery"
+            >
+              <img
+                src="assets\images\gallery\Turandot_primavera_2020_Local_6.jpg"
+                class="img-fluid"
+                alt="..."
+              />
             </a>
           </div>
           <div class="col-6 col-sm-6 col-md-4 section_gallery__grid__item">
-            <a href="assets\images\gallery\Turandot_primavera_2020_Local_7.jpg" data-lightbox="gallery">
-              <img src="assets\images\gallery\Turandot_primavera_2020_Local_7.jpg" class="img-fluid" alt="..." />
+            <a
+              href="assets\images\gallery\Turandot_primavera_2020_Local_7.jpg"
+              data-lightbox="gallery"
+            >
+              <img
+                src="assets\images\gallery\Turandot_primavera_2020_Local_7.jpg"
+                class="img-fluid"
+                alt="..."
+              />
             </a>
           </div>
           <div class="col-6 col-sm-6 col-md-4 section_gallery__grid__item">
-            <a href="assets\images\gallery\Turandot_primavera_2020_Local_8.jpg" data-lightbox="gallery">
-              <img src="assets\images\gallery\Turandot_primavera_2020_Local_8.jpg" class="img-fluid" alt="..." />
+            <a
+              href="assets\images\gallery\Turandot_primavera_2020_Local_8.jpg"
+              data-lightbox="gallery"
+            >
+              <img
+                src="assets\images\gallery\Turandot_primavera_2020_Local_8.jpg"
+                class="img-fluid"
+                alt="..."
+              />
             </a>
           </div>
         </div>
